# instant_client

./: .env.example  .gitignore  README.md  instant.schema.ts  package.json  pyproject.toml  test_flow.ts
.cursor/rules/: no-edit-generated.mdc
examples/: demo.py
examples/generated_instant_client/: __init__.py  client.py  models.py
src/instant_client/: __init__.py  cli.py
src/instant_client/generator/: codegen.py
src/instant_client/generator/templates/: __init__.py.j2  client.py.j2  models.py.j2
src/instant_client/runtime/: __init__.py  auth.py  core.py  endpoints.py  errors.py  http.py  steps.py  storage.py
tests/: 1_write_from_js.spec.ts  2_read_from_python.py  3_write_from_python.py  4_read_from_js.spec.ts
